# canada-climate-data-bulk-download

./: Cargo.toml
src/: main.rs
