[package]
name = "canada-climate-data-bulk-download"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
indicatif = "0.15"
ureq = { version = "2.1.1", freatures = ["charset"] }